--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -4,3 +4,9 @@ h1{
 #spinner{
     display: none;
 }
+.card:hover {
+    transform: scale(1.05);
+    overflow: hidden;
+    transition: all ease-in-out .2s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
